--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title_tag_text: Hello, I&rsquo;m Anna-Liisa
-h1_tag_text: Hello, I&rsquo;m Anna-Liisa
+title_tag_text: Hello, Liisu
+h1_tag_text: Hello, Liisu
 
 exclude: ["README.md", "CNAME"]
