--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title_tag_text: Hello, Liisu
-h1_tag_text: Hello, Liisu
+title_tag_text: Kallis Liisu
+h1_tag_text: Kallis Liisu
 
 exclude: ["README.md", "CNAME"]
